[package]
name = "rlua_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.10", features = ["lua54", "vendored", "macros", "serialize", "anyhow"] }
serde_json = ">=1.0"
serde = { version = ">=1.0", features = ["derive"] }
